style: text-align fix

--- a/src/components/cookie-policy/CookiePolicy.css
+++ b/src/components/cookie-policy/CookiePolicy.css
@@ -1,3 +1,4 @@
 .cookie-policy {
     padding: var(--text-padding);
+    text-align: justify;
 }
