--- a/src/components/privacy-policy/PrivacyPolicy.css
+++ b/src/components/privacy-policy/PrivacyPolicy.css
@@ -1,3 +1,4 @@
 .privacy-policy {
     padding: var(--text-padding);
+    text-align: justify;
 }
