--- a/src/layout/sections/about/About.css
+++ b/src/layout/sections/about/About.css
@@ -39,6 +39,7 @@
 .about-description {
     font-size: 16px;
     line-height: 1.5;
+    text-align: justify;
 }
 
 @media screen and (max-width: 820px) {
