--- a/src/layout/sections/services/Services.css
+++ b/src/layout/sections/services/Services.css
@@ -64,6 +64,7 @@
 
 .services-text-content {
     width: 40%;
+    text-align: justify;
 }
 
 @media screen and (max-width: 960px) {
@@ -77,6 +78,5 @@
 
     .services-text-content {
         width: 90%;
-        text-align: center;
     }
 }
