--- a/src/layout/sections/services/service/battery/Battery.css
+++ b/src/layout/sections/services/service/battery/Battery.css
@@ -40,4 +40,5 @@
 
 .battery-text {
     padding: 20px;
+    text-align: justify;
 }
