--- a/src/layout/sections/services/service/delivery/Delivery.css
+++ b/src/layout/sections/services/service/delivery/Delivery.css
@@ -40,6 +40,7 @@
 
 .delivery-text {
     padding: 20px;
+    text-align: justify;
 }
 
 
