--- a/src/layout/sections/services/service/driver/Driver.css
+++ b/src/layout/sections/services/service/driver/Driver.css
@@ -40,4 +40,5 @@
 
 .driver-text {
     margin: 20px;
+    text-align: justify;
 }
