--- a/src/layout/sections/services/service/transportation/Transportation.css
+++ b/src/layout/sections/services/service/transportation/Transportation.css
@@ -40,4 +40,5 @@
 
 .transportation-text {
     padding: 20px;
+    text-align: justify;
 }
